Blender quitting on startup (macos) #95039

Closed
opened 2022-01-19 02:55:21 +01:00 by Guido · 13 comments

System Information
Operating system: macOS-12.1-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 5700 XT OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.7.101

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, January 19, 02:20:34 - 2e5aecf557 - dmg - 209.92MB Intel and from the day before...
Downloaded and selft compiled Version.

Worked: last version that worked: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-16 23:26, hash: 34d424fd64

Short description of error
Quitting on startup.

Exact steps for others to reproduce the error
Download or compile for macos 12.1, xcode 13.2 and try to launch blender.

PS: Nothing changed on my system and worked till compile of : Version: 3.1.0 Alpha, branch: master, commit date: 2022-01-16 23:26, hash: 34d424fd64

**System Information** Operating system: macOS-12.1-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 5700 XT OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.7.101 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, January 19, 02:20:34 - 2e5aecf557fb - dmg - 209.92MB Intel and from the day before... Downloaded and selft compiled Version. Worked: last version that worked: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-16 23:26, hash: `34d424fd64` **Short description of error** Quitting on startup. **Exact steps for others to reproduce the error** Download or compile for macos 12.1, xcode 13.2 and try to launch blender. PS: Nothing changed on my system and worked till compile of : Version: 3.1.0 Alpha, branch: master, commit date: 2022-01-16 23:26, hash: `34d424fd64`
Author

Added subscriber: @Nurb2Kea

Added subscriber: @Nurb2Kea

#95063 was marked as duplicate of this issue

#95063 was marked as duplicate of this issue

#95068 was marked as duplicate of this issue

#95068 was marked as duplicate of this issue

Added subscriber: @PhlixFer

Added subscriber: @PhlixFer

issue is definitely recreatable here!

Blender version: 3.1.0 Alpha, branch: master (modified), commit date: 2022-01-19 03:30, hash: 71879d665d

Last terminal outputs:

ERROR (gpu.shader): gpu_shader_2D_image_multi_rect_color VertShader: 
      | 
      | Error: Unknown identifier 'binding' in layout
      | 
      | Error: Use of undeclared identifier '_multi_rect_data'
      | 
      | Error: Use of undeclared identifier '_multi_rect_data'
      | 
      | Error: Use of undeclared identifier '_multi_rect_data'
      | 
      | Error: Use of undeclared identifier 'rect'
      | Error: Use of undeclared identifier 'rect'
      | 
      | Error: Use of undeclared identifier 'tex'
      | Error: Use of undeclared identifier 'tex'
      | 
      | Error: Use of undeclared identifier 'rect'
      | Error: Use of undeclared identifier 'rect'
      | 
      | Error: Use of undeclared identifier 'tex'
      | Error: Use of undeclared identifier 'tex'
      | 
      | Error: Use of undeclared identifier 'rect'
      | Error: Use of undeclared identifier 'rect'
      | 
      | Error: Use of undeclared identifier 'tex'
      | Error: Use of undeclared identifier 'tex'
      | 
      | Error: Use of undeclared identifier 'rect'
      | Error: Use of undeclared identifier 'rect'
      | 
      | Error: Use of undeclared identifier 'tex'
      | Error: Use of undeclared identifier 'tex'
      | 
      | Error: Use of undeclared identifier 'rect'
      | 
      | Error: Use of undeclared identifier 'tex'

ERROR (gpu.shader): gpu_shader_2D_image_multi_rect_color FragShader: 
      | 
      | Error: Unknown identifier 'binding' in layout

Writing: /var/folders/lh/56lhpg9d1f7cd6033hpjjbb00000gn/T/blender.crash.txt
zsh: segmentation fault  blender

blender.crash.txt

issue is definitely recreatable here! Blender version: 3.1.0 Alpha, branch: master (modified), commit date: 2022-01-19 03:30, hash: 71879d665d Last terminal outputs: ``` ERROR (gpu.shader): gpu_shader_2D_image_multi_rect_color VertShader: | | Error: Unknown identifier 'binding' in layout | | Error: Use of undeclared identifier '_multi_rect_data' | | Error: Use of undeclared identifier '_multi_rect_data' | | Error: Use of undeclared identifier '_multi_rect_data' | | Error: Use of undeclared identifier 'rect' | Error: Use of undeclared identifier 'rect' | | Error: Use of undeclared identifier 'tex' | Error: Use of undeclared identifier 'tex' | | Error: Use of undeclared identifier 'rect' | Error: Use of undeclared identifier 'rect' | | Error: Use of undeclared identifier 'tex' | Error: Use of undeclared identifier 'tex' | | Error: Use of undeclared identifier 'rect' | Error: Use of undeclared identifier 'rect' | | Error: Use of undeclared identifier 'tex' | Error: Use of undeclared identifier 'tex' | | Error: Use of undeclared identifier 'rect' | Error: Use of undeclared identifier 'rect' | | Error: Use of undeclared identifier 'tex' | Error: Use of undeclared identifier 'tex' | | Error: Use of undeclared identifier 'rect' | | Error: Use of undeclared identifier 'tex' ERROR (gpu.shader): gpu_shader_2D_image_multi_rect_color FragShader: | | Error: Unknown identifier 'binding' in layout Writing: /var/folders/lh/56lhpg9d1f7cd6033hpjjbb00000gn/T/blender.crash.txt zsh: segmentation fault blender ``` [blender.crash.txt](https://archive.blender.org/developer/F12811055/blender.crash.txt)
Jeroen Bakker self-assigned this 2022-01-19 06:56:20 +01:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

Have been able to reproduce this on a Mac M1 mini. installing Xcode to test the fix

Have been able to reproduce this on a Mac M1 mini. installing Xcode to test the fix

This issue was referenced by 71386c08f1

This issue was referenced by 71386c08f110d402a7b4f5fbd5a7629829d8364f
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author

3DViewport is missing visuals . No grid, selections,...to see
continueing on the following build:

Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-20 00:43, hash: b7fe27314b

3DViewport is missing visuals . No grid, selections,...to see continueing on the following build: Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-20 00:43, hash: `b7fe27314b`
Member

Added subscribers: @franz_65, @PratikPB2123

Added subscribers: @franz_65, @PratikPB2123
Member

Added subscribers: @miiroseppanen, @Memento

Added subscribers: @miiroseppanen, @Memento
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95039
No description provided.