Fix T95039,T94998: Shaders compilation errors on Mac.

Cause was incorrect logic when generating the resource layout. It the
explicit_location_support setting was ignored and the binding were
generated for image, uniform buffers and storage buffers.